@@ -5,6 +5,9 @@
 
 Gepi-master (Version de développement)
 ===========================
+Carnets de notes:
+- Possibilité d'afficher la date de fin de période dans la page index du Carnet de notes professeur.
+
 Bulletins:
 - Validation de corrections en attente: Affichage de témoins dans la page de 
   sélection des bulletins à imprimer.
